Fix duration/period more